assets/css/style.css
/* ... */
/* making the layout responsive on tablets*/
@media only screen and (min-width:600px) {
  main {
    max-width: 2000px;
    margin-inline: auto;
    display: flex;

    justify-content: center;
    align-items: stretch;
    gap: 25px;
  }

  .main-content{
    width: 85%;
  }
}

/* responsive larger than 1250px screen */
@media (min-width: 1250px) {
  /* MAIN */
  .main-content {
    width: 75%;
    margin: 0;
  }
}

/* responsive larger than 1600px screen */
@media (min-width: 1600px) {
  /* Heading */
  .heading {
    margin-top: 2%;
  }
}

/* Responsive CSS for the heading*/
@media (max-width: 760px) {
  .heading {
    font-size: 4.5rem;
  }
}
@media (max-width: 640px) {
  .heading {
    font-size: 3.5rem;
  }
}
@media (max-width: 510px) {
  .heading {
    font-size: 1.9rem;
  }
}

.owner-info-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top:2rem;
}

.owner-info {
  margin: 10px;
}

.image {
  width: 180x;
  height: 180px;
  border-radius: 19.4859%;
}

#contact {
  color: #cc56ff;
}

.wordCarousel {
  font-size: 36px;
  font-weight: 100;
  color: #eee;
  div {
    overflow: hidden;
    position: relative;
    float: right;
    height: 65px;
    padding-top: 10px;
    margin-top: -10px;
    li {
      font-family: Serif;
      color: #eee;
      font-weight: 700;
      padding: 0 10px;
      height: 45px;
      margin-bottom: 45px;
      display: block;
    }
  }
}

.flip2 {
  animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}
.flip3 {
  animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}
.flip4 {
  animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}
.flip5 {
  animation: flip5 12s cubic-bezier(0.23, 1, 0.32, 1.2) infinite;
}

@keyframes flip2 {
  0% {
    margin-top: -180px;
  }
  5% {
    margin-top: -90px;
  }
  50% {
    margin-top: -90px;
  }
  55% {
    margin-top: 0px;
  }
  99.99% {
    margin-top: 0px;
  }
  100% {
    margin-top: -180px;
  }
}

@keyframes flip3 {
  0% {
    margin-top: -270px;
  }
  5% {
    margin-top: -180px;
  }
  33% {
    margin-top: -180px;
  }
  38% {
    margin-top: -90px;
  }
  66% {
    margin-top: -90px;
  }
  71% {
    margin-top: 0px;
  }
  99.99% {
    margin-top: 0px;
  }
  100% {
    margin-top: -270px;
  }
}

@keyframes flip4 {
  0% {
    margin-top: -360px;
  }
  5% {
    margin-top: -270px;
  }
  25% {
    margin-top: -270px;
  }
  30% {
    margin-top: -180px;
  }
  50% {
    margin-top: -180px;
  }
  55% {
    margin-top: -90px;
  }
  75% {
    margin-top: -90px;
  }
  80% {
    margin-top: 0px;
  }
  99.99% {
    margin-top: 0px;
  }
  100% {
    margin-top: -360px;
  }
}

@keyframes flip5 {
  0% {
    margin-top: -450px;
  }
  5% {
    margin-top: -360px;
  }
  20% {
    margin-top: -360px;
  }
  25% {
    margin-top: -270px;
  }
  40% {
    margin-top: -270px;
  }
  45% {
    margin-top: -180px;
  }
  60% {
    margin-top: -180px;
  }
  65% {
    margin-top: -90px;
  }
  80% {
    margin-top: -90px;
  }
  85% {
    margin-top: 0px;
  }
  99.99% {
    margin-top: 0px;
  }
  100% {
    margin-top: -450px;
  }
}

@keyframes showTopText {
  0% {
    transform: translate3d(0, 100%, 0);
  }
  40%,
  60% {
    transform: translate3d(0, 50%, 0);
  }
  100% {
    transform: translate3d(0, 0, 0);
  }
}
@keyframes showBottomText {
  0% {
    transform: translate3d(0, -100%, 0);
  }
  100% {
    transform: translate3d(0, 0, 0);
  }
}
.animated-title {
  color: #27bcda;
  font-family: "Mina", sans-serif;
  width: 90vmin;
  margin-inline: auto;
}
.animated-title > div {
  overflow: hidden;
  width: 100%;
}
.animated-title > div div {
  font-size: 10vmin;
  padding: 2vmin 0;
}
.animated-title > div div span {
  display: block;
}
.animated-title > div.text-top {
  border-bottom: 1vmin solid #fcf8f8;
  margin-top: 2rem;
}
.animated-title > div.text-top div {
  animation: showTopText 0.5s;
  animation-delay: 0.5s;
  animation-fill-mode: forwards;
  bottom: 0;
  transform: translate(0, 100%);
}
.animated-title > div.text-top div span:first-child {
  color: #c761fb;
}
.animated-title > div.text-bottom {
  bottom: 0;
}
.animated-title > div.text-bottom div {
  animation: showBottomText 0.5s;
  animation-delay: 1.75s;
  animation-fill-mode: forwards;
  top: 0;
  transform: translate(0, -100%);
}

#para {
  color: #b616c7;
  font-family: Cochin, serif;
  font-size: 30px;
  margin-top: 40px;
  margin-bottom: 40px;
  text-align: center;
}

@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;500&display=swap");

* {
  margin: 0;
  padding: 0;
}

#part {
  background: #282c34;
  font-size: 2vmin;
  font-family: JetBrains Mono, monospace;
  height: 80vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px auto;
}

@media only screen and (max-width:600px){
  #part{
    height:60vh;
  }
}

.string {
  display: flex;
  flex-direction: column;
  text-align: center;
  animation: move 4s infinite;
}

.greeting {
  position: relative;
  top: 8.6vmin;
  animation: white-out 5s infinite;
}

.closure::after {
  content: "";
  height: 25vmin;
  width: 40vmin;
  background: #282c34;
  transform: translate(-45vmin, -24.5vmin);
}

.closure::before {
  content: "";
  height: 25vmin;
  width: 40vmin;
  background: #282c34;
  transform: translate(-40vmin, 5vmin);
}

.en {
  color: #fa8231;
}

.es {
  color: #27bcda;
}

.de {
  color: #c678dd;
}

.it {
  color: #a9b0bd;
}

@keyframes move {
  25% {
    transform: translatey(-5.8vmin);
    opacity: 1;
  }
  50% {
    transform: translatey(-11vmin);
  }
  75% {
    transform: translatey(-16.5vmin);
  }
}

